2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix error in finite difference gradient.
	* src/finite-difference-gradient.cc: Avoid returning NaN
	if the computed difference is almost null.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle NaN in copy assertions.
	* src/util.cc: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not use boost::make_shared.
	* tests/simple.cc: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Require Boost 1.34.
	Revert to Boost 1.34 to keep Ubuntu Hardy compatibility.
	* configure.ac: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with share.
	* build-aux/pkg-config.mk: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Require at least Boost 1.37.
	* configure.ac: Check that Boost version is newer
	than 1.37 to allow the use of make_shared.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix buildchain.
	* Makefile.am: Remove useless rules.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Add sections into Problem class.
	* include/roboptim/core/problem.hh: Here.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix implementation.
	* include/roboptim/core/problem.hxx: Here.
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Display initial constraints values.
	* include/roboptim/core/problem.hxx: Display constraints initial values.
	* src/result.cc: Restyle.
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Update forward declarations.
	* include/roboptim/core/fwd.hh: Add ConstantFunction.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize addConstraint.
	* include/roboptim/core/problem.hh,
	* include/roboptim/core/problem.hxx:
	Modify addConstraint in order to let the user
	choose how a constraint should be considered
	(example: consider a constraint as a linear or
	as a non-linear function).
