@@ -3,8 +3,7 @@ include $(top_srcdir)/build-aux/init.mk
 # Add available warnings flags.
 AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
-lib_LTLIBRARIES = libroboptim-core.la 		\
-		  roboptim-core-dummy-plugin.la
+lib_LTLIBRARIES = libroboptim-core.la
 
 libroboptim_core_la_SOURCES = 		\
 	constant-function.cc		\
@@ -32,5 +31,6 @@ libroboptim_core_la_SOURCES += 		\
 
 libroboptim_core_la_LDFLAGS = -version-info 1:1:0
 
+lib_LTLIBRARIES += roboptim-core-dummy-plugin.la
 roboptim_core_dummy_plugin_la_SOURCES = roboptim-core-dummy-plugin.cc
 roboptim_core_dummy_plugin_la_LDFLAGS = -module -version-info 1:1:0
