@@ -1,3 +1,10 @@
+2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Make SolverFactory exception-safe.
+	* include/roboptim/core/solver-factory.hxx: Make factory
+	exception-safe.
+	* src/Makefile.am: Restyle.
+
 2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix error in finite difference gradient.
